added github link to modals, animated close button, added text to replace placeholders in modals

--- a/projects/index.html
+++ b/projects/index.html
@@ -30,12 +30,12 @@
 	<div class="tabs">
 		<div class="float tab">
 			<h3>revisionio <button id="revisionioButton" onclick="displayModal('revisionio')"><i data-feather="info"></i></button></h3>
-			<p>example text. blah blah blah.</p>
+			<p>a program I made where you can test yourself on various subjects and topics</p>
 			<a href="https://github.com/swarbler/quiz"><img src="../_images/projects/revisionio-1.png" alt="revisionio"></a>
 		</div>
 		<div class="float tab">
 			<h3>pname <button id="pnameButton" onclick="displayModal('pname')"><i data-feather="info"></i></button></h3>
-			<p>example text. blah blah blah.</p>
+			<p>a simple program I made that selects names randomly from a list file</p>
 			<a href="https://github.com/swarbler/pname"><img src="../_images/projects/pname-1.png" alt="pname"></a>
 		</div>
 	</div>
@@ -59,11 +59,12 @@
 	<div class="modal-content">
 		<div class="modal-header">
 			<span class="revisionio close"><i data-feather="x"></i></span>
+			<a href="https://github.com/swarbler/quiz">view on github <i data-feather="github"></i></a>
 			<h2>revisionio</h2>
 		</div>
 		<div class="modal-body">
-			<p>Some text in the Modal Body</p>
-			<p>Some other text...</p>
+			<p>revisionio is a text-based program where you can revise subjects by doing simple multiple-choice questions.</p>
+			<p>It currently includes most of my IGCSE elective subjects</p>
 			<img src="../_images/projects/revisionio-2.png" alt="revisionio">
 		</div>
 	</div>
@@ -72,11 +73,12 @@
 	<div class="modal-content">
 		<div class="modal-header">
 			<span class="pname close"><i data-feather="x"></i></span>
+			<a href="https://github.com/swarbler/pname">view on github <i data-feather="github"></i></a>
 			<h2>pname</h2>
 		</div>
 		<div class="modal-body">
-			<p>Some text in the Modal Body</p>
-			<p>Some other text...</p>
+			<p>pname is a text-program that lets you select a random name from a list.txt file with fun ASCII art!</p>
+			<p>It can also be set to read a pre-existing list (e.g. "year10.txt")</p>
 			<img src="../_images/projects/pname-2.png" alt="pname">
 		</div>
 	</div>
