--- a/other/index.html
+++ b/other/index.html
@@ -6,7 +6,7 @@
 	<title>sbird \_*v*_/</title>
 	<link rel="icon" type="image/x-icon" href="../bird4.svg" class="fav">
 	<link rel="stylesheet" href="../style.css">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/_fonts/remixicon.css"/>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0./_fonts/remixicon.css"/>
 	<script src="https://unpkg.com/feather-icons"></script>
 </head>
 <body>
