--- a/rainforest/index.html
+++ b/rainforest/index.html
@@ -6,7 +6,7 @@
 	<title>Deforestation of the Amazon Rainforest</title>
 	<link rel="icon" type="image/x-icon" href="../kiwi.svg" class="fav">
 	<link rel="stylesheet" href="../style.css">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/_fonts/remixicon.css"/>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0./_fonts/remixicon.css"/>
 	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 	<script src="https://unpkg.com/feather-icons"></script>
 </head>
