--- a/projects/index.html
+++ b/projects/index.html
@@ -6,7 +6,7 @@
 	<title>sbird \_^v^_/</title>
 	<link rel="icon" type="image/x-icon" href="../kiwi.svg" class="fav">
 	<link rel="stylesheet" href="../style.css">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0./_fonts/remixicon.css"/>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0./fonts/remixicon.css"/>
 	<script src="https://unpkg.com/feather-icons"></script>
 </head>
 <body>
@@ -31,12 +31,12 @@
 		<div class="float tab">
 			<h3>revisionio <button id="revisionioButton" onclick="displayModal('revisionio')"><i data-feather="info"></i></button></h3>
 			<p>a program I made where you can test yourself on various subjects and topics</p>
-			<a href="https://github.com/swarbler/quiz"><img src="../_images/projects/revisionio-1.png" alt="revisionio"></a>
+			<a href="https://github.com/swarbler/quiz"><img src="../images/projects/revisionio-1.png" alt="revisionio"></a>
 		</div>
 		<div class="float tab">
 			<h3>pname <button id="pnameButton" onclick="displayModal('pname')"><i data-feather="info"></i></button></h3>
 			<p>a simple program I made that selects names randomly from a list file</p>
-			<a href="https://github.com/swarbler/pname"><img src="../_images/projects/pname-1.png" alt="pname"></a>
+			<a href="https://github.com/swarbler/pname"><img src="../images/projects/pname-1.png" alt="pname"></a>
 		</div>
 	</div>
 </div>
@@ -65,7 +65,7 @@
 		<div class="modal-body">
 			<p>revisionio is a text-based program where you can revise subjects by doing simple multiple-choice questions.</p>
 			<p>It currently includes most of my IGCSE elective subjects</p>
-			<img src="../_images/projects/revisionio-2.png" alt="revisionio">
+			<img src="../images/projects/revisionio-2.png" alt="revisionio">
 		</div>
 	</div>
 </div>
@@ -79,7 +79,7 @@
 		<div class="modal-body">
 			<p>pname is a text-program that lets you select a random name from a list.txt file with fun ASCII art!</p>
 			<p>It can also be set to read a pre-existing list (e.g. "year10.txt")</p>
-			<img src="../_images/projects/pname-2.png" alt="pname">
+			<img src="../images/projects/pname-2.png" alt="pname">
 		</div>
 	</div>
 </div>
