--- a/example/index.html
+++ b/example/index.html
@@ -22,7 +22,7 @@
 </nav>
 <div class="header"> 
 	<h3>EXAMPLE PAGE</h3>
-	<h1>Hi, I'm an <span>example page</span> and I'm boring...in a good way!</h1>
+	<h1>Hi, I'm an <span>example</span> and I'm boring...in a good way!</h1>
 </div>
 <div class="section picture">
 	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
