--- a/photos/index.html
+++ b/photos/index.html
@@ -26,16 +26,34 @@
 	<h1>I enjoy taking <span>photos</span> of all sorts of things</h1>
 </div>
 <div class="section gallery">
-	<h2><i data-feather="align-right"></i> Stuff</h2>
-	
-	<img src="https://placehold.co/600x400" alt="placeholder">
-	<img src="https://placehold.co/600x400" alt="placeholder">
-	<img src="https://placehold.co/600x400" alt="placeholder">
-	<img src="https://placehold.co/600x400" alt="placeholder">
-	<img src="https://placehold.co/600x400" alt="placeholder">
-	<img src="https://placehold.co/600x400" alt="placeholder">
-	<img src="https://placehold.co/600x400" alt="placeholder">
-	<img src="https://placehold.co/600x400" alt="placeholder">
+	<h2><i data-feather="align-right"></i> people, objects, and nature</h2>
+	<img src="../images/zve/street-photos/ZVE01625.JPG" alt="people walking">
+	<img src="../images/zve/street-photos/ZVE00592.JPG" alt="motorcycle">
+	<img src="../images/zve/street-photos/ZVE02096.JPG" alt="boat in a river">
+	<img src="../images/zve/street-photos/ZVE02113.JPG" alt="angry straw man">
+	<img src="../images/zve/street-photos/ZVE02205.JPG" alt="road">
+	<img src="../images/zve/street-photos/ZVE02320.JPG" alt="shining lake">
+	<img src="../images/zve/street-photos/ZVE02373.JPG" alt="kid on a bike">
+	<img src="../images/zve/street-photos/ZVE02431.JPG" alt="smoke cannon">
+	<img src="../images/zve/street-photos/ZVE02449.JPG" alt="town facing the sun">
+</div>
+<div class="section gallery">
+	<h2><i data-feather="align-right"></i> in the zoo</h2>
+	<img src="../images/zve/in-the-zoo/ZVE01880.JPG" alt="swimming bear">
+	<img src="../images/zve/in-the-zoo/ZVE01941.JPG" alt="flamingoes and boy">
+	<img src="../images/zve/in-the-zoo/ZVE01804.JPG" alt="panda">
+	<img src="../images/zve/in-the-zoo/ZVE01780.JPG" alt="golden boy">
+	<img src="../images/zve/in-the-zoo/ZVE00651.JPG" alt="hello">
+	<img src="../images/zve/in-the-zoo/ZVE01770.JPG" alt="hmm">
+	<img src="../images/zve/in-the-zoo/ZVE01897.JPG" alt="monkeys on a rope">
+	<img src="../images/zve/in-the-zoo/ZVE01932.JPG" alt="woodpecker">
+</div>
+<div class="section gallery">
+	<h2><i data-feather="align-right"></i> a bunch of cat photos</h2>
+	<img src="../images/zve/cat-photos/ZVE00451.JPG" alt="staring cat">
+	<img src="../images/zve/cat-photos/ZVE00458.JPG" alt="sleeping cat">
+	<img src="../images/zve/cat-photos/ZVE00501.JPG" alt="sleeping cat 2">
+	<img src="../images/zve/cat-photos/ZVE00511.JPG" alt="adorable cat">
 </div>
 <div class="footer">
 	<p>Made with <i data-feather="cloud-drizzle"></i> by sbird</p>
