added vertical images to photo gallery, rotation on hover is lessened

--- a/photos/index.html
+++ b/photos/index.html
@@ -27,12 +27,18 @@
 </div>
 <div class="section gallery">
 	<h2><i data-feather="align-right"></i> people, objects, and nature</h2>
-	<img src="../images/zve/street-photos/ZVE01625.JPG" alt="people walking">
+	<img src="../images/zve/vertical-street-photos/ZVE02293.JPG" alt="shadow of the tree">
+	<img src="../images/zve/vertical-street-photos/ZVE02327.JPG" alt="boat in the lake">
 	<img src="../images/zve/street-photos/ZVE00592.JPG" alt="motorcycle">
+	<img src="../images/zve/street-photos/ZVE01625.JPG" alt="people walking">
 	<img src="../images/zve/street-photos/ZVE02096.JPG" alt="boat in a river">
 	<img src="../images/zve/street-photos/ZVE02113.JPG" alt="angry straw man">
+	<img src="../images/zve/vertical-street-photos/ZVE02391.JPG" alt="walking to the bridge">
+	<img src="../images/zve/vertical-street-photos/ZVE02467.JPG" alt="dangly vines">
 	<img src="../images/zve/street-photos/ZVE02320.JPG" alt="shining lake">
 	<img src="../images/zve/street-photos/ZVE02373.JPG" alt="kid on a bike">
+	<img src="../images/zve/vertical-street-photos/ZVE02290.JPG" alt="shadow of the tree 2">
+	<img src="../images/zve/vertical-street-photos/ZVE02305.JPG" alt="too overexposed">
 	<img src="../images/zve/street-photos/ZVE02431.JPG" alt="smoke cannon">
 	<img src="../images/zve/street-photos/ZVE02449.JPG" alt="town facing the sun">
 </div>
