--- a/index.html
+++ b/index.html
@@ -25,6 +25,162 @@
 	<h3>hello</h3>
 	<h1>Hi, I'm <span>sbird</span> and I like to make all sorts of things!</h1>
 </div>
+<div class="section">
+	<h2><i data-feather="align-right"></i> Example List</h2>
+	<div class="lists">
+		<div class="float list">
+			<h3>EXAMPLE a</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+		<div class="float list">
+			<h3>EXAMPLE b</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+		<div class="float list">
+			<h3>EXAMPLE c</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+		<div class="float list">
+			<h3>EXAMPLE d</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+		<div class="float list">
+			<h3>EXAMPLE e</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+		<div class="float list">
+			<h3>EXAMPLE f</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+		<div class="float list">
+			<h3>EXAMPLE g</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+		<div class="float list">
+			<h3>EXAMPLE h</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+	</div>
+</div>
+<div class="section picture">
+	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
+	<div class="imagetxt fade">
+		<h3>Example Fade</h3>
+		<p>i am a paragraph!</p>
+	</div>
+</div>
+<div class="section multipicture cycles glow">
+	<img class="cycle1" src="https://placehold.co/600x400" alt="placeholder">
+	<img class="cycle2" src="https://placehold.co/600x400" alt="placeholder">
+	<img class="cycle3" src="https://placehold.co/600x400" alt="placeholder">
+	<img class="cycle4" src="https://placehold.co/600x400" alt="placeholder">
+</div>
+<div class="section picture">
+	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
+	<div class="imagetxt plato left top">
+		<h3>Example PlatoLT</h3>
+		<p>i am a paragraph!</p>
+	</div>
+</div>
+<div class="section multipicture cycles fuzzy">
+	<img class="cycle1" src="https://placehold.co/600x400" alt="placeholder">
+	<img class="cycle2" src="https://placehold.co/600x400" alt="placeholder">
+	<img class="cycle3" src="https://placehold.co/600x400" alt="placeholder">
+	<img class="cycle4" src="https://placehold.co/600x400" alt="placeholder">
+</div>
+<div class="section picture">
+	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
+	<div class="imagetxt pop">
+		<h3>Example Pop</h3>
+		<p>i am a paragraph!</p>
+	</div>
+</div>
+<div class="section multipicture cycles scroll">
+	<img class="cycle1" src="https://placehold.co/600x400" alt="placeholder">
+	<img class="cycle2" src="https://placehold.co/600x400" alt="placeholder">
+	<img class="cycle3" src="https://placehold.co/600x400" alt="placeholder">
+	<img class="cycle4" src="https://placehold.co/600x400" alt="placeholder">
+</div>
+<div class="section">
+	<h2><i data-feather="align-right"></i> Example Cards</h2>
+	<div class="cards">
+		<a class="float card" href="https://github.com">
+			<h3>EXAMPLE 1a</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</a>
+		<a class="float card" href="https://github.com">
+			<h3>EXAMPLE 2a</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</a>
+		<a class="float card" href="https://github.com">
+			<h3>EXAMPLE 3a</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</a>
+		<a class="float card" href="https://github.com">
+			<h3>EXAMPLE 1b</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</a>
+		<a class="float card" href="https://github.com">
+			<h3>EXAMPLE 2b</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</a>
+		<a class="float card" href="https://github.com">
+			<h3>EXAMPLE 3b</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</a>
+	</div>
+</div>
+<div class="section picture">
+	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
+	<div class="imagetxt plato left bottom fade">
+		<h3>Example PlatoLBF</h3>
+		<p>i am a paragraph!</p>
+	</div>
+</div>
+<div class="section">
+	<h2><i data-feather="align-right"></i> Example TXT List</h2>
+	<div class="lists">
+		<div class="txt list">
+			<h3>EXAMPLE a</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+		<div class="txt list">
+			<h3>EXAMPLE b</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+		<div class="txt list">
+			<h3>EXAMPLE c</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+		<div class="txt list">
+			<h3>EXAMPLE d</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+		<div class="txt list">
+			<h3>EXAMPLE e</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+		<div class="txt list">
+			<h3>EXAMPLE f</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+		<div class="txt list">
+			<h3>EXAMPLE g</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+		<div class="txt list">
+			<h3>EXAMPLE h</h3>
+			<p>example paragraph. blah blah blah.</p>
+		</div>
+	</div>
+</div>
+<div class="section picture">
+	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
+	<div class="imagetxt fly fade">
+		<h3>Example FlyF</h3>
+		<p>i am a paragraph!</p>
+	</div>
+</div>
 <div class="footer">
 	<p>Made with <i data-feather="cloud-lightning"></i> by sbird</p>
 </div>
