--- a/photos/index.html
+++ b/photos/index.html
@@ -27,38 +27,38 @@
 </div>
 <div class="section gallery">
 	<h2><i data-feather="align-right"></i> people, objects, and nature</h2>
-	<img src="../images/zve/vertical-street-photos/ZVE02293.JPG" alt="shadow of the tree">
-	<img src="../images/zve/vertical-street-photos/ZVE02327.JPG" alt="boat in the lake">
-	<img src="../images/zve/street-photos/ZVE00592.JPG" alt="motorcycle">
-	<img src="../images/zve/street-photos/ZVE01625.JPG" alt="people walking">
-	<img src="../images/zve/street-photos/ZVE02096.JPG" alt="boat in a river">
-	<img src="../images/zve/street-photos/ZVE02113.JPG" alt="angry straw man">
-	<img src="../images/zve/vertical-street-photos/ZVE02391.JPG" alt="walking to the bridge">
-	<img src="../images/zve/vertical-street-photos/ZVE02467.JPG" alt="dangly vines">
-	<img src="../images/zve/street-photos/ZVE02320.JPG" alt="shining lake">
-	<img src="../images/zve/street-photos/ZVE02373.JPG" alt="kid on a bike">
-	<img src="../images/zve/vertical-street-photos/ZVE02290.JPG" alt="shadow of the tree 2">
-	<img src="../images/zve/vertical-street-photos/ZVE02305.JPG" alt="too overexposed">
-	<img src="../images/zve/street-photos/ZVE02431.JPG" alt="smoke cannon">
-	<img src="../images/zve/street-photos/ZVE02449.JPG" alt="town facing the sun">
+	<img src="../images/zve/vertical-street-photos/ZVE02293.webp" alt="shadow of the tree">
+	<img src="../images/zve/vertical-street-photos/ZVE02327.webp" alt="boat in the lake">
+	<img src="../images/zve/street-photos/ZVE00592.webp" alt="motorcycle">
+	<img src="../images/zve/street-photos/ZVE01625.webp" alt="people walking">
+	<img src="../images/zve/street-photos/ZVE02096.webp" alt="boat in a river">
+	<img src="../images/zve/street-photos/ZVE02113.webp" alt="angry straw man">
+	<img src="../images/zve/vertical-street-photos/ZVE02391.webp" alt="walking to the bridge">
+	<img src="../images/zve/vertical-street-photos/ZVE02467.webp" alt="dangly vines">
+	<img src="../images/zve/street-photos/ZVE02320.webp" alt="shining lake">
+	<img src="../images/zve/street-photos/ZVE02373.webp" alt="kid on a bike">
+	<img src="../images/zve/vertical-street-photos/ZVE02290.webp" alt="shadow of the tree 2">
+	<img src="../images/zve/vertical-street-photos/ZVE02305.webp" alt="too overexposed">
+	<img src="../images/zve/street-photos/ZVE02431.webp" alt="smoke cannon">
+	<img src="../images/zve/street-photos/ZVE02449.webp" alt="town facing the sun">
 </div>
 <div class="section gallery">
 	<h2><i data-feather="align-right"></i> in the zoo</h2>
-	<img src="../images/zve/in-the-zoo/ZVE01880.JPG" alt="swimming bear">
-	<img src="../images/zve/in-the-zoo/ZVE01941.JPG" alt="flamingoes and boy">
-	<img src="../images/zve/in-the-zoo/ZVE01804.JPG" alt="panda">
-	<img src="../images/zve/in-the-zoo/ZVE01780.JPG" alt="golden boy">
-	<img src="../images/zve/in-the-zoo/ZVE00651.JPG" alt="hello">
-	<img src="../images/zve/in-the-zoo/ZVE01770.JPG" alt="hmm">
-	<img src="../images/zve/in-the-zoo/ZVE01897.JPG" alt="monkeys on a rope">
-	<img src="../images/zve/in-the-zoo/ZVE01932.JPG" alt="woodpecker">
+	<img src="../images/zve/in-the-zoo/ZVE01880.webp" alt="swimming bear">
+	<img src="../images/zve/in-the-zoo/ZVE01941.webp" alt="flamingoes and boy">
+	<img src="../images/zve/in-the-zoo/ZVE01804.webp" alt="panda">
+	<img src="../images/zve/in-the-zoo/ZVE01780.webp" alt="golden boy">
+	<img src="../images/zve/in-the-zoo/ZVE00651.webp" alt="hello">
+	<img src="../images/zve/in-the-zoo/ZVE01770.webp" alt="hmm">
+	<img src="../images/zve/in-the-zoo/ZVE01897.webp" alt="monkeys on a rope">
+	<img src="../images/zve/in-the-zoo/ZVE01932.webp" alt="woodpecker">
 </div>
 <div class="section gallery">
 	<h2><i data-feather="align-right"></i> a bunch of cat photos</h2>
-	<img src="../images/zve/cat-photos/ZVE00451.JPG" alt="staring cat">
-	<img src="../images/zve/cat-photos/ZVE00458.JPG" alt="sleeping cat">
-	<img src="../images/zve/cat-photos/ZVE00501.JPG" alt="sleeping cat 2">
-	<img src="../images/zve/cat-photos/ZVE00511.JPG" alt="adorable cat">
+	<img src="../images/zve/cat-photos/ZVE00451.webp" alt="staring cat">
+	<img src="../images/zve/cat-photos/ZVE00458.webp" alt="sleeping cat">
+	<img src="../images/zve/cat-photos/ZVE00501.webp" alt="sleeping cat 2">
+	<img src="../images/zve/cat-photos/ZVE00511.webp" alt="adorable cat">
 </div>
 <div class="footer">
 	<p>Made with <i data-feather="cloud-drizzle"></i> by sbird</p>
