added countryguess to projects

--- a/projects/index.html
+++ b/projects/index.html
@@ -38,6 +38,11 @@
 			<p>a simple program I made that selects names randomly from a list file</p>
 			<a href="https://github.com/swarbler/pname"><img src="../images/projects/pname-1.png" alt="pname"></a>
 		</div>
+		<div class="float tab">
+			<h3>pname <button id="countryguessButton" onclick="displayModal('countryguess')"><i data-feather="info"></i></button></h3>
+			<p>guess the countries of the world in a fun little quiz game</p>
+			<a href="https://github.com/swarbler/countryguess"><img src="../images/projects/countryguess-1.png" alt="countryguess"></a>
+		</div>
 	</div>
 </div>
 <div class="section">
@@ -80,6 +85,20 @@
 			<p>pname is a text-program that lets you select a random name from a list.txt file with fun ASCII art!</p>
 			<p>It can also be set to read a pre-existing list (e.g. "year10.txt")</p>
 			<img src="../images/projects/pname-2.png" alt="pname">
+		</div>
+	</div>
+</div>
+<div id="countryguessModal" class="modal">
+	<div class="modal-content">
+		<div class="modal-header">
+			<span class="countryguess close"><i data-feather="x"></i></span>
+			<a href="https://github.com/swarbler/countryguess">view on github <i data-feather="github"></i></a>
+			<h2>countryguess</h2>
+		</div>
+		<div class="modal-body">
+			<p>countryguess is a text-program where you try to guess the countries of the world</p>
+			<p>you can also optionally enabled U.N. observer states and disputed territories</p>
+			<img src="../images/projects/countryguess-2.png" alt="countryguess">
 		</div>
 	</div>
 </div>
