--- a/projects/index.html
+++ b/projects/index.html
@@ -39,7 +39,7 @@
 			<a href="https://github.com/swarbler/pname"><img src="../images/projects/pname-1.png" alt="pname"></a>
 		</div>
 		<div class="float tab">
-			<h3>pname <button id="countryguessButton" onclick="displayModal('countryguess')"><i data-feather="info"></i></button></h3>
+			<h3>countryguess <button id="countryguessButton" onclick="displayModal('countryguess')"><i data-feather="info"></i></button></h3>
 			<p>guess the countries of the world in a fun little quiz game</p>
 			<a href="https://github.com/swarbler/countryguess"><img src="../images/projects/countryguess-1.png" alt="countryguess"></a>
 		</div>
