added more photos

--- a/photos/index.html
+++ b/photos/index.html
@@ -41,6 +41,8 @@
 	<img src="../images/zve/vertical-street-photos/ZVE02305.webp" alt="too overexposed">
 	<img src="../images/zve/street-photos/ZVE02431.webp" alt="smoke cannon">
 	<img src="../images/zve/street-photos/ZVE02449.webp" alt="town facing the sun">
+	<img src="../images/zve/street-photos/ZVE01617.webp" alt="writing on a fan">
+	<img src="../images/zve/street-photos/ZVE00656.webp" alt="flares">
 </div>
 <div class="section gallery">
 	<h2><i data-feather="align-right"></i> in the zoo</h2>
