added camera gear, margin bottom for cards

--- a/about/index.html
+++ b/about/index.html
@@ -54,6 +54,23 @@
 		</a>
 	</div>
 </div>
+<div class="section">
+	<h2><i data-feather="align-right"></i> Camera Gear</h2>
+	<div class="cards">
+		<div class="float card">
+			<h3><i class="ri-camera-line"></i> Camera</h3>
+			<p>Sony ZVE-10 w/ Smallrig Cage</p>
+		</div>
+		<div class="float card">
+			<h3><i class="ri-camera-lens-line"></i> Lens</h3>
+			<p>Sigma 18-50mm f2.8 DC DN</p>
+		</div>
+		<div class="float card">
+			<h3><i class="ri-triangle-line"></i> Tripod</h3>
+			<p>K&F Concept C225C0 + BH-25 (BA225)</p>
+		</div>
+	</div>
+</div>
 <div class="section inline social">
 	<h2><i data-feather="message-circle"></i> Socials</h2>
 	<div class="icons">
