--- a/about/index.html
+++ b/about/index.html
@@ -71,6 +71,56 @@
 		</div>
 	</div>
 </div>
+<div class="section">
+	<h2><i data-feather="align-right"></i> Software I Use</h2>
+	<div class="lists">
+		<div class="float list">
+			<h3><i class="ri-firefox-browser-fill"></i> Browser</h3>
+			<p>Firefox</p>
+		</div>
+		<div class="float list">
+			<h3><i class="ri-music-fill"></i> Music Player</h3>
+			<p>AIMP</p>
+		</div>
+		<div class="float list">
+			<h3><i class="ri-image-fill"></i> Photos Viewer</h3>
+			<p>nomacs</p>
+		</div>
+		<div class="float list">
+			<h3><i class="ri-movie-fill"></i> Video Player</h3>
+			<p>PotPlayer</p>
+		</div>
+		<div class="float list">
+			<h3><i class="ri-file-text-fill"></i> Notes</h3>
+			<p>Obsidian</p>
+		</div>
+		<div class="float list">
+			<h3><i class="ri-mail-fill"></i> Email Client</h3>
+			<p>Thunderbird</p>
+		</div>
+	</div>
+</div>
+<div class="section">
+	<h2><i data-feather="align-right"></i> Software I Use</h2>
+	<div class="lists">
+		<div class="float list">
+			<h3>Game Engine</h3>
+			<p>Godot 4</p>
+		</div>
+		<div class="float list">
+			<h3>Code Editor</h3>
+			<p>VSCodium</p>
+		</div>
+		<div class="float list">
+			<h3>Pixel Art Editor</h3>
+			<p>Aseprite</p>
+		</div>
+		<div class="float list">
+			<h3>3D Slicer</h3>
+			<p>OrcaSlicer</p>
+		</div>
+	</div>
+</div>
 <div class="section inline social">
 	<h2><i data-feather="message-circle"></i> Socials</h2>
 	<div class="icons">
