--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@
 	<title>sbird \_~v~_/</title>
 	<link rel="icon" type="image/x-icon" href="../bird5.svg" class="fav">
 	<link rel="stylesheet" href="../style.css">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"/>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.6.0/fonts/remixicon.css"/>
 	<script src="https://unpkg.com/feather-icons"></script>
 </head>
 <body>
@@ -26,35 +26,6 @@
 	<h1>Hi, I'm <span>sbird</span> and I like to make all sorts of things!</h1>
 </div>
 <div class="section">
-	<h2><i data-feather="align-right"></i> Example Cards</h2>
-	<div class="cards">
-		<a class="float card" href="https://github.com">
-			<h3>EXAMPLE 1a</h3>
-			<p>example paragraph. blah blah blah.</p>
-		</a>
-		<a class="float card" href="https://github.com">
-			<h3>EXAMPLE 2a</h3>
-			<p>example paragraph. blah blah blah.</p>
-		</a>
-		<a class="float card" href="https://github.com">
-			<h3>EXAMPLE 3a</h3>
-			<p>example paragraph. blah blah blah.</p>
-		</a>
-		<a class="float card" href="https://github.com">
-			<h3>EXAMPLE 1b</h3>
-			<p>example paragraph. blah blah blah.</p>
-		</a>
-		<a class="float card" href="https://github.com">
-			<h3>EXAMPLE 2b</h3>
-			<p>example paragraph. blah blah blah.</p>
-		</a>
-		<a class="float card" href="https://github.com">
-			<h3>EXAMPLE 3b</h3>
-			<p>example paragraph. blah blah blah.</p>
-		</a>
-	</div>
-</div>
-<div class="section">
 	<h2><i data-feather="align-right"></i> Camera Gear</h2>
 	<div class="cards">
 		<div class="float card">
@@ -72,51 +43,59 @@
 	</div>
 </div>
 <div class="section">
-	<h2><i data-feather="align-right"></i> Software I Use</h2>
+	<h2><i data-feather="align-right"></i> Everyday Software I Use</h2>
 	<div class="lists">
 		<div class="float list">
 			<h3><i class="ri-firefox-browser-fill"></i> Browser</h3>
-			<p>Firefox</p>
+			<p>Floorp (Firefox fork)</p>
 		</div>
 		<div class="float list">
-			<h3><i class="ri-music-fill"></i> Music Player</h3>
+			<h3><i class="ri-music-line"></i> Music Player</h3>
 			<p>AIMP</p>
 		</div>
 		<div class="float list">
-			<h3><i class="ri-image-fill"></i> Photos Viewer</h3>
+			<h3><i class="ri-image-line"></i> Photos Viewer</h3>
 			<p>nomacs</p>
 		</div>
 		<div class="float list">
-			<h3><i class="ri-movie-fill"></i> Video Player</h3>
+			<h3><i class="ri-movie-line"></i> Video Player</h3>
 			<p>PotPlayer</p>
 		</div>
 		<div class="float list">
-			<h3><i class="ri-file-text-fill"></i> Notes</h3>
+			<h3><i class="ri-file-pdf-2-line"></i> PDF Viewer</h3>
+			<p>SumatraPDF</p>
+		</div>
+		<div class="float list">
+			<h3><i class="ri-file-text-line"></i> Notes</h3>
 			<p>Obsidian</p>
 		</div>
 		<div class="float list">
-			<h3><i class="ri-mail-fill"></i> Email Client</h3>
+			<h3><i class="ri-mail-line"></i> Email Client</h3>
 			<p>Thunderbird</p>
 		</div>
 	</div>
 </div>
 <div class="section">
-	<h2><i data-feather="align-right"></i> Software I Use</h2>
+	<h2><i data-feather="align-right"></i> Specialised Software I Use</h2>
 	<div class="lists">
 		<div class="float list">
-			<h3>Game Engine</h3>
+			<h3><i class="ri-game-line"></i> Game Engine</h3>
 			<p>Godot 4</p>
 		</div>
 		<div class="float list">
-			<h3>Code Editor</h3>
+			<h3><i class="ri-code-s-slash-line"></i> Code Editor</h3>
 			<p>VSCodium</p>
 		</div>
 		<div class="float list">
-			<h3>Pixel Art Editor</h3>
+			<h3><i class="ri-git-pull-request-line"></i> Git GUI Client</h3>
+			<p>Fork</p>
+		</div>
+		<div class="float list">
+			<h3><i class="ri-artboard-2-line"></i> Pixel Art Editor</h3>
 			<p>Aseprite</p>
 		</div>
 		<div class="float list">
-			<h3>3D Slicer</h3>
+			<h3><i class="ri-box-3-line"></i> 3D Slicer</h3>
 			<p>OrcaSlicer</p>
 		</div>
 	</div>
