--- a/about/index.html
+++ b/about/index.html
@@ -45,59 +45,59 @@
 <div class="section">
 	<h2><i data-feather="align-right"></i> Everyday Software I Use</h2>
 	<div class="lists">
-		<div class="float list">
+		<a class="float list" href="https://floorp.app">
 			<h3><i class="ri-firefox-browser-fill"></i> Browser</h3>
 			<p>Floorp (Firefox fork)</p>
-		</div>
-		<div class="float list">
-			<h3><i class="ri-music-line"></i> Music Player</h3>
-			<p>AIMP</p>
-		</div>
-		<div class="float list">
-			<h3><i class="ri-image-line"></i> Photos Viewer</h3>
-			<p>nomacs</p>
-		</div>
-		<div class="float list">
-			<h3><i class="ri-movie-line"></i> Video Player</h3>
-			<p>PotPlayer</p>
-		</div>
-		<div class="float list">
-			<h3><i class="ri-file-pdf-2-line"></i> PDF Viewer</h3>
-			<p>SumatraPDF</p>
-		</div>
-		<div class="float list">
-			<h3><i class="ri-file-text-line"></i> Notes</h3>
-			<p>Obsidian</p>
-		</div>
-		<div class="float list">
+		</a>
+		<a class="float list" href="https://thunderbird.net">
 			<h3><i class="ri-mail-line"></i> Email Client</h3>
 			<p>Thunderbird</p>
-		</div>
+		</a>
+		<a class="float list" href="https://aimp.ru">
+			<h3><i class="ri-music-line"></i> Music Player</h3>
+			<p>AIMP</p>
+		</a>
+		<a class="float list" href="https://nomacs.org">
+			<h3><i class="ri-image-line"></i> Photos Viewer</h3>
+			<p>nomacs</p>
+		</a>
+		<a class="float list" href="https://potplayer.daum.net/">
+			<h3><i class="ri-movie-line"></i> Video Player</h3>
+			<p>PotPlayer</p>
+		</a>
+		<a class="float list" href="https://sumatrapdf.org">
+			<h3><i class="ri-file-pdf-2-line"></i> PDF Viewer</h3>
+			<p>SumatraPDF</p>
+		</a>
+		<a class="float list" href="https://obsidian.md">
+			<h3><i class="ri-file-text-line"></i> Notes</h3>
+			<p>Obsidian</p>
+		</a>
 	</div>
 </div>
 <div class="section">
 	<h2><i data-feather="align-right"></i> Specialised Software I Use</h2>
 	<div class="lists">
-		<div class="float list">
+		<a class="float list" href="https://godotengine.org">
 			<h3><i class="ri-game-line"></i> Game Engine</h3>
 			<p>Godot 4</p>
-		</div>
-		<div class="float list">
+		</a>
+		<a class="float list" href="https://vscodium.com">
 			<h3><i class="ri-code-s-slash-line"></i> Code Editor</h3>
 			<p>VSCodium</p>
-		</div>
-		<div class="float list">
+		</a>
+		<a class="float list" href="https://fork.dev">
 			<h3><i class="ri-git-pull-request-line"></i> Git GUI Client</h3>
 			<p>Fork</p>
-		</div>
-		<div class="float list">
+		</a>
+		<a class="float list" href="https://aseprite.org">
 			<h3><i class="ri-artboard-2-line"></i> Pixel Art Editor</h3>
 			<p>Aseprite</p>
-		</div>
-		<div class="float list">
+		</a>
+		<a class="float list" href="https://github.com/SoftFever/OrcaSlicer">
 			<h3><i class="ri-box-3-line"></i> 3D Slicer</h3>
 			<p>OrcaSlicer</p>
-		</div>
+		</a>
 	</div>
 </div>
 <div class="section inline social">
