--- a/about/index.html
+++ b/about/index.html
@@ -25,7 +25,7 @@
 	<h3>hello</h3>
 	<h1>Hi, I'm <span>sbird</span> and I like to make all sorts of things!</h1>
 </div>
-<div class="section">
+<div class="section camera-gear">
 	<h2><i data-feather="align-right"></i> Camera Gear</h2>
 	<div class="cards">
 		<div class="float card">
@@ -42,7 +42,7 @@
 		</div>
 	</div>
 </div>
-<div class="section">
+<div class="section everyday-software">
 	<h2><i data-feather="align-right"></i> Everyday Software I Use</h2>
 	<div class="lists">
 		<a class="float list" href="https://floorp.app">
@@ -75,7 +75,7 @@
 		</a>
 	</div>
 </div>
-<div class="section">
+<div class="section specialised-software">
 	<h2><i data-feather="align-right"></i> Specialised Software I Use</h2>
 	<div class="lists">
 		<a class="float list" href="https://godotengine.org">
