added amazon links to camera gear

--- a/about/index.html
+++ b/about/index.html
@@ -28,18 +28,18 @@
 <div class="section camera-gear">
 	<h2><i data-feather="align-right"></i> Camera Gear</h2>
 	<div class="cards">
-		<div class="float card">
+		<a class="float card" href="https://www.bhphotovideo.com/c/product/1649504-REG/sony_zv_e10_mirrorless_camera_body.html">
 			<h3><i class="ri-camera-line"></i> Camera</h3>
 			<p>Sony ZVE-10 w/ Smallrig Cage</p>
-		</div>
-		<div class="float card">
+		</a>
+		<a class="float card" href="https://www.bhphotovideo.com/c/product/1667228-REG/sigma_18_50mm_f_2_8_dg_dn.html">
 			<h3><i class="ri-camera-lens-line"></i> Lens</h3>
 			<p>Sigma 18-50mm f2.8 DC DN</p>
-		</div>
-		<div class="float card">
+		</a>
+		<a class="float card" href="https://www.amazon.com/dp/B081DYTR9J">
 			<h3><i class="ri-triangle-line"></i> Tripod</h3>
 			<p>K&F Concept C225C0 + BH-25 (BA225)</p>
-		</div>
+		</a>
 	</div>
 </div>
 <div class="section everyday-software">
