change to b&h links

--- a/about/index.html
+++ b/about/index.html
@@ -36,7 +36,7 @@
 			<h3><i class="ri-camera-lens-line"></i> Lens</h3>
 			<p>Sigma 18-50mm f2.8 DC DN</p>
 		</a>
-		<a class="float card" href="https://www.amazon.com/dp/B081DYTR9J">
+		<a class="float card" href="https://www.bhphotovideo.com/c/product/1659382-REG/k_f_concept_kf09_077v2_ba225_carbon_fiber_camera.html">
 			<h3><i class="ri-triangle-line"></i> Tripod</h3>
 			<p>K&F Concept C225C0 + BH-25 (BA225)</p>
 		</a>
