more items added

--- a/about/index.html
+++ b/about/index.html
@@ -73,6 +73,10 @@
 			<h3><i class="ri-file-text-line"></i> Notes</h3>
 			<p>Obsidian</p>
 		</a>
+		<a class="float list" href="https://kdeconnect.kde.org/">
+			<h3><i class="ri-file-text-line"></i> File Sharing + Remote Access</h3>
+			<p>KDE Connect</p>
+		</a>
 	</div>
 </div>
 <div class="section specialised-software">
@@ -93,6 +97,10 @@
 		<a class="float list" href="https://aseprite.org">
 			<h3><i class="ri-artboard-2-line"></i> Pixel Art Editor</h3>
 			<p>Aseprite</p>
+		</a>
+		<a class="float list" href="https://www.blackmagicdesign.com/products/davinciresolve">
+			<h3><i class="ri-box-3-line"></i> Video Editor</h3>
+			<p>DaVinci Resolve</p>
 		</a>
 		<a class="float list" href="https://github.com/SoftFever/OrcaSlicer">
 			<h3><i class="ri-box-3-line"></i> 3D Slicer</h3>
