--- a/about/index.html
+++ b/about/index.html
@@ -74,7 +74,7 @@
 			<p>Obsidian</p>
 		</a>
 		<a class="float list" href="https://kdeconnect.kde.org/">
-			<h3><i class="ri-file-text-line"></i> File Sharing + Remote Access</h3>
+			<h3><i class="ri-folder-shared-line"></i> File Sharing</h3>
 			<p>KDE Connect</p>
 		</a>
 	</div>
@@ -99,7 +99,7 @@
 			<p>Aseprite</p>
 		</a>
 		<a class="float list" href="https://www.blackmagicdesign.com/products/davinciresolve">
-			<h3><i class="ri-box-3-line"></i> Video Editor</h3>
+			<h3><i class="ri-folder-video-line"></i> Video Editor</h3>
 			<p>DaVinci Resolve</p>
 		</a>
 		<a class="float list" href="https://github.com/SoftFever/OrcaSlicer">
