--- a/about/index.html
+++ b/about/index.html
@@ -25,7 +25,7 @@
 	<h3>hello</h3>
 	<h1>Hi, I'm <span>sbird</span> and I like to make all sorts of things!</h1>
 </div>
-<div class="section">
+<div class="section less-padding">
 	<h2><i data-feather="align-right"></i> Fun Facts About Me</h2>
 	<div class="list">
 		<div class="txt list">
