more bits and bobs

--- a/about/index.html
+++ b/about/index.html
@@ -27,10 +27,26 @@
 </div>
 <div class="section less-padding">
 	<h2><i data-feather="align-right"></i> Fun Facts About Me</h2>
-	<div class="list">
-		<div class="txt list">
+	<div class="cards">
+		<div class="txt card">
 			<h3>Favourite Harry Potter Book</h3>
 			<p>Prisoner of Azkaban. Runner-up is probably Goblet of Fire</p>
+		</div>
+		<div class="txt card">
+			<h3>Favourite Programming Language</h3>
+			<p>Python. Simple and easy to use</p>
+		</div>
+		<div class="txt card">
+			<h3>Favourite Season</h3>
+			<p>Autumn. The weather is nice and leaves change colour</p>
+		</div>
+		<div class="txt card">
+			<h3>Favourite Weird Food Combination</h3>
+			<p>Raw tuna and orange slices. I swear it tastes good</p>
+		</div>
+		<div class="txt card">
+			<h3>Favourite Ice Cream Flavour</h3>
+			<p>Cookies and cream. It's always good</p>
 		</div>
 	</div>
 </div>
