--- a/projects/index.html
+++ b/projects/index.html
@@ -29,6 +29,16 @@
 	<h2><i data-feather="align-right"></i> Programs</h2>
 	<div class="tabs">
 		<div class="float tab">
+			<h3>bestof <button id="bestofButton" onclick="displayModal('bestof')"><i data-feather="info"></i></button></h3>
+			<p>repository of all the best things in each category!</p>
+			<a href="https://swarbler.github.io/bestof"><img src="../images/projects/countryguess-1.png" alt="bestof"></a>
+		</div>
+		<div class="float tab">
+			<h3>countryguess <button id="countryguessButton" onclick="displayModal('countryguess')"><i data-feather="info"></i></button></h3>
+			<p>guess the countries of the world in a fun little quiz game</p>
+			<a href="https://github.com/swarbler/countryguess"><img src="../images/projects/countryguess-1.png" alt="countryguess"></a>
+		</div>
+		<div class="float tab">
 			<h3>revisionio <button id="revisionioButton" onclick="displayModal('revisionio')"><i data-feather="info"></i></button></h3>
 			<p>a program I made where you can test yourself on various subjects and topics</p>
 			<a href="https://github.com/swarbler/quiz"><img src="../images/projects/revisionio-1.png" alt="revisionio"></a>
@@ -37,11 +47,6 @@
 			<h3>pname <button id="pnameButton" onclick="displayModal('pname')"><i data-feather="info"></i></button></h3>
 			<p>a simple program I made that selects names randomly from a list file</p>
 			<a href="https://github.com/swarbler/pname"><img src="../images/projects/pname-1.png" alt="pname"></a>
-		</div>
-		<div class="float tab">
-			<h3>countryguess <button id="countryguessButton" onclick="displayModal('countryguess')"><i data-feather="info"></i></button></h3>
-			<p>guess the countries of the world in a fun little quiz game</p>
-			<a href="https://github.com/swarbler/countryguess"><img src="../images/projects/countryguess-1.png" alt="countryguess"></a>
 		</div>
 	</div>
 </div>
@@ -99,6 +104,21 @@
 			<p>countryguess is a text-program where you try to guess the countries of the world</p>
 			<p>you can also optionally enabled U.N. observer states and disputed territories</p>
 			<img src="../images/projects/countryguess-2.png" alt="countryguess">
+		</div>
+	</div>
+</div>
+<div id="bestofModal" class="modal">
+	<div class="modal-content">
+		<div class="modal-header">
+			<span class="bestof close"><i data-feather="x"></i></span>
+			<a href="https://github.com/swarbler/bestof">view on github <i data-feather="github"></i></a>
+			<h2>bestof</h2>
+		</div>
+		<div class="modal-body">
+			<p>i've been working on this for many years now, and there's a whole lot of things in it!</p>
+			<p>everything is organised into different sections which makes it really easy to navigate. there's also a search bar!</p>
+			<p>i love just the docs</p>
+			<img src="../images/projects/countryguess-2.png" alt="bestof">
 		</div>
 	</div>
 </div>
