--- a/projects/index.html
+++ b/projects/index.html
@@ -101,8 +101,8 @@
 			<h2>countryguess</h2>
 		</div>
 		<div class="modal-body">
-			<p>countryguess is a text-program where you try to guess the countries of the world</p>
-			<p>you can also optionally enabled U.N. observer states and disputed territories</p>
+			<p>countryguess is a text program where you try to guess the countries of the world</p>
+			<p>you can also optionally enable U.N. observer states and disputed territories</p>
 			<img src="../images/projects/countryguess-2.png" alt="countryguess">
 		</div>
 	</div>
