added new bestof screenshots that show new custom theme

--- a/projects/index.html
+++ b/projects/index.html
@@ -31,7 +31,7 @@
 		<div class="float tab">
 			<h3>bestof <button id="bestofButton" onclick="displayModal('bestof')"><i data-feather="info"></i></button></h3>
 			<p>repository of all the best things in each category!</p>
-			<a href="https://swarbler.github.io/bestof"><img src="../images/projects/bestof-1.png" alt="bestof"></a>
+			<a href="https://swarbler.github.io/bestof"><img src="../images/projects/bestof/0-home-page.png" alt="bestof"></a>
 		</div>
 		<div class="float tab">
 			<h3>countryguess <button id="countryguessButton" onclick="displayModal('countryguess')"><i data-feather="info"></i></button></h3>
@@ -118,7 +118,7 @@
 			<p>i've been working on this for many years now, and there's a whole lot of things in it!</p>
 			<p>everything is organised into different sections which makes it really easy to navigate. there's also a search bar!</p>
 			<p>i love just the docs, such as good jekyll theme</p>
-			<img src="../images/projects/bestof-2.png" alt="bestof">
+			<img src="../images/projects/bestof/cables-power.png.png" alt="bestof">
 		</div>
 	</div>
 </div>
