--- a/projects/index.html
+++ b/projects/index.html
@@ -118,7 +118,7 @@
 			<p>i've been working on this for many years now, and there's a whole lot of things in it!</p>
 			<p>everything is organised into different sections which makes it really easy to navigate. there's also a search bar!</p>
 			<p>i love just the docs, such as good jekyll theme</p>
-			<img src="../images/projects/bestof/cables-power.png.png" alt="bestof">
+			<img src="../images/projects/bestof/cables-power.png" alt="bestof">
 		</div>
 	</div>
 </div>
