added websites section to projects, placed bestof to website section as it is not a program

--- a/projects/index.html
+++ b/projects/index.html
@@ -26,13 +26,18 @@
 	<h1>I work on a lot of <span>projects</span> in my free time</h1>
 </div>
 <div class="section">
-	<h2><i data-feather="align-right"></i> Programs</h2>
+	<h2><i data-feather="align-right"></i> Websites</h2>
 	<div class="tabs">
 		<div class="float tab">
 			<h3>bestof <button id="bestofButton" onclick="displayModal('bestof')"><i data-feather="info"></i></button></h3>
 			<p>repository of all the best things in each category!</p>
 			<a href="https://swarbler.github.io/bestof"><img src="../images/projects/bestof/0-home-page.png" alt="bestof"></a>
 		</div>
+	</div>
+</div>
+<div class="section">
+	<h2><i data-feather="align-right"></i> Programs</h2>
+	<div class="tabs">
 		<div class="float tab">
 			<h3>countryguess <button id="countryguessButton" onclick="displayModal('countryguess')"><i data-feather="info"></i></button></h3>
 			<p>guess the countries of the world in a fun little quiz game</p>
