--- a/projects/index.html
+++ b/projects/index.html
@@ -123,7 +123,37 @@
 			<p>i've been working on this for many years now, and there's a whole lot of things in it!</p>
 			<p>everything is organised into different sections which makes it really easy to navigate. there's also a search bar!</p>
 			<p>i love just the docs, such as good jekyll theme</p>
-			<img src="../images/projects/bestof/cables-power.png" alt="bestof">
+			<div class="slideshow-img">
+				<div class="slides-img fade">
+					<div class="numbertext">1 / 3</div>
+					<img src="../images/projects/bestof/cables-power.png" style="width:100%">
+					<div class="text">Caption Text</div>
+				</div>
+			
+				<div class="slides-img fade">
+					<div class="numbertext">2 / 3</div>
+					<img src="../images/projects/bestof/cables-data.png" style="width:100%">
+					<div class="text">Caption Two</div>
+				</div>
+			
+				<div class="slides-img fade">
+					<div class="numbertext">3 / 3</div>
+					<img src="../images/projects/bestof/clothing.png" style="width:100%">
+					<div class="text">Caption Three</div>
+				</div>
+
+				<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+				<a class="next" onclick="plusSlides(1)">&#10095;</a>
+			</div>
+			<br>
+
+			<!-- The dots/circles -->
+			<div style="text-align:center">
+				<span class="dot" onclick="currentSlide(1)"></span>
+				<span class="dot" onclick="currentSlide(2)"></span>
+				<span class="dot" onclick="currentSlide(3)"></span>
+			</div>
+			<!-- <img src="../images/projects/bestof/cables-power.png" alt="bestof"> -->
 		</div>
 	</div>
 </div>
@@ -158,6 +188,41 @@
 			}
 		} 
 	}
+</script>
+<script>
+	
+	let slideIndex = 1;
+	showSlides(slideIndex);
+
+	// Next/previous controls
+	function plusSlides(n) {
+		showSlides(slideIndex += n);
+	}
+
+	// Thumbnail image controls
+	function currentSlide(n) {
+		showSlides(slideIndex = n);
+	}
+
+	function showSlides(n) {
+		let i;
+		let slides = document.getElementsByClassName("slides-img");
+		let dots = document.getElementsByClassName("dot");
+
+		if (n > slides.length) {slideIndex = 1}
+		if (n < 1) {slideIndex = slides.length}
+
+		for (i = 0; i < slides.length; i++) {
+			slides[i].style.display = "none";
+		}
+
+		for (i = 0; i < dots.length; i++) {
+			dots[i].className = dots[i].className.replace(" active", "");
+		}
+
+		slides[slideIndex-1].style.display = "block";
+		dots[slideIndex-1].className += " active";
+	} 
 </script>
 </body>
 </html>
