--- a/projects/index.html
+++ b/projects/index.html
@@ -124,23 +124,9 @@
 			<p>everything is organised into different sections which makes it really easy to navigate. there's also a search bar!</p>
 			<p>i love just the docs, such as good jekyll theme</p>
 			<div class="slideshow-img">
-				<div class="slides-img fade">
-					<div class="numbertext">1 / 3</div>
-					<img src="../images/projects/bestof/cables-power.png" style="width:100%">
-					<div class="text">Caption Text</div>
-				</div>
-			
-				<div class="slides-img fade">
-					<div class="numbertext">2 / 3</div>
-					<img src="../images/projects/bestof/cables-data.png" style="width:100%">
-					<div class="text">Caption Two</div>
-				</div>
-			
-				<div class="slides-img fade">
-					<div class="numbertext">3 / 3</div>
-					<img src="../images/projects/bestof/clothing.png" style="width:100%">
-					<div class="text">Caption Three</div>
-				</div>
+				<img class="slides-img" src="../images/projects/bestof/cables-power.png" style="width:100%">
+				<img class="slides-img" src="../images/projects/bestof/cables-data.png" style="width:100%">
+				<img class="slides-img" src="../images/projects/bestof/clothing.png" style="width:100%">
 
 				<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 				<a class="next" onclick="plusSlides(1)">&#10095;</a>
