spots instead of info icon

--- a/projects/index.html
+++ b/projects/index.html
@@ -29,7 +29,7 @@
 	<h2><i data-feather="align-right"></i> Websites</h2>
 	<div class="tabs">
 		<div class="float tab">
-			<h3>bestof <button id="bestofButton" onclick="displayModal('bestof')"><i data-feather="info"></i></button></h3>
+			<h3>bestof <span class="spot" onclick="displayModal('bestof')">?</span></h3>
 			<p>repository of all the best things in each category!</p>
 			<a href="https://swarbler.github.io/bestof"><img src="../images/projects/bestof/0-home-page.png" alt="bestof"></a>
 		</div>
@@ -39,17 +39,17 @@
 	<h2><i data-feather="align-right"></i> Programs</h2>
 	<div class="tabs">
 		<div class="float tab">
-			<h3>countryguess <button id="countryguessButton" onclick="displayModal('countryguess')"><i data-feather="info"></i></button></h3>
+			<h3>countryguess <span class="spot" onclick="displayModal('countryguess')">?</span></h3>
 			<p>guess the countries of the world in a fun little quiz game</p>
 			<a href="https://github.com/swarbler/countryguess"><img src="../images/projects/countryguess-1.png" alt="countryguess"></a>
 		</div>
 		<div class="float tab">
-			<h3>revisionio <button id="revisionioButton" onclick="displayModal('revisionio')"><i data-feather="info"></i></button></h3>
+			<h3>revisionio <span class="spot" onclick="displayModal('revisionio')">?</span></h3>
 			<p>a program I made where you can test yourself on various subjects and topics</p>
 			<a href="https://github.com/swarbler/quiz"><img src="../images/projects/revisionio-1.png" alt="revisionio"></a>
 		</div>
 		<div class="float tab">
-			<h3>pname <button id="pnameButton" onclick="displayModal('pname')"><i data-feather="info"></i></button></h3>
+			<h3>pname <span class="spot" onclick="displayModal('pname')">?</span></h3>
 			<p>a simple program I made that selects names randomly from a list file</p>
 			<a href="https://github.com/swarbler/pname"><img src="../images/projects/pname-1.png" alt="pname"></a>
 		</div>
