added all images to slideshow

--- a/projects/index.html
+++ b/projects/index.html
@@ -124,22 +124,38 @@
 			<p>everything is organised into different sections which makes it really easy to navigate. there's also a search bar!</p>
 			<p>i love just the docs, such as good jekyll theme</p>
 			<div class="slideshow-img">
-				<img class="slides-img" src="../images/projects/bestof/cables-power.png" style="width:100%">
+				<img class="slides-img" src="../images/projects/bestof/tvs.png" style="width:100%">
 				<img class="slides-img" src="../images/projects/bestof/cables-data.png" style="width:100%">
+				<img class="slides-img" src="../images/projects/bestof/cables-power.png" style="width:100%">
+				<img class="slides-img" src="../images/projects/bestof/self-hosted.png" style="width:100%">
+				<img class="slides-img" src="../images/projects/bestof/headphones.png" style="width:100%">
+				<img class="slides-img" src="../images/projects/bestof/peripherals.png" style="width:100%">
+				<img class="slides-img" src="../images/projects/bestof/storage.png" style="width:100%">
+				<img class="slides-img" src="../images/projects/bestof/lenses.png" style="width:100%">
+				<img class="slides-img" src="../images/projects/bestof/lights.png" style="width:100%">
+				<img class="slides-img" src="../images/projects/bestof/stationary.png" style="width:100%">
 				<img class="slides-img" src="../images/projects/bestof/clothing.png" style="width:100%">
+				<img class="slides-img" src="../images/projects/bestof/mobile-apps.png" style="width:100%">
 
 				<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 				<a class="next" onclick="plusSlides(1)">&#10095;</a>
 			</div>
 			<br>
 
-			<!-- The dots/circles -->
 			<div style="text-align:center">
 				<span class="dot" onclick="currentSlide(1)"></span>
 				<span class="dot" onclick="currentSlide(2)"></span>
 				<span class="dot" onclick="currentSlide(3)"></span>
+				<span class="dot" onclick="currentSlide(4)"></span>
+				<span class="dot" onclick="currentSlide(5)"></span>
+				<span class="dot" onclick="currentSlide(6)"></span>
+				<span class="dot" onclick="currentSlide(7)"></span>
+				<span class="dot" onclick="currentSlide(8)"></span>
+				<span class="dot" onclick="currentSlide(9)"></span>
+				<span class="dot" onclick="currentSlide(10)"></span>
+				<span class="dot" onclick="currentSlide(11)"></span>
+				<span class="dot" onclick="currentSlide(12)"></span>
 			</div>
-			<!-- <img src="../images/projects/bestof/cables-power.png" alt="bestof"> -->
 		</div>
 	</div>
 </div>
