--- a/photos/index.html
+++ b/photos/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="../style.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.6.0/fonts/remixicon.css"/>
 	<script src="https://unpkg.com/feather-icons"></script>
+	<script src="https://unpkg.com/lucide@latest"></script>
 </head>
 <body>
 <nav>
@@ -67,6 +68,9 @@
 </div>
 <script>
 	feather.replace();
+</script>
+<script>
+    lucide.createIcons();
 </script>
 </body>
 </html>
