--- a/projects/index.html
+++ b/projects/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="../style.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.6.0/fonts/remixicon.css"/>
 	<script src="https://unpkg.com/feather-icons"></script>
+	<script src="https://unpkg.com/lucide@latest"></script>
 </head>
 <body>
 <nav>
@@ -225,6 +226,9 @@
 		slides[slideIndex-1].style.display = "block";
 		dots[slideIndex-1].className += " active";
 	} 
+</script>
+<script>
+    lucide.createIcons();
 </script>
 </body>
 </html>
