changed forums section, added lemmy, slowly changing from feather icon to remix icons

--- a/about/index.html
+++ b/about/index.html
@@ -27,7 +27,7 @@
 	<h1>Hi, I'm <span>sbird</span> and I like to make all sorts of things!</h1>
 </div>
 <div class="section less-padding">
-	<h2><i data-feather="align-right"></i> Fun Facts About Me</h2>
+	<h2><i class="ri-align-item-left-line"></i> Fun Facts About Me</h2>
 	<div class="cards">
 		<div class="txt card">
 			<h3>Favourite Harry Potter Book</h3>
@@ -52,7 +52,7 @@
 	</div>
 </div>
 <div class="section camera-gear">
-	<h2><i data-feather="align-right"></i> Camera Gear</h2>
+	<h2><i class="ri-align-right"></i> Camera Gear</h2>
 	<div class="cards">
 		<a class="float card" href="https://www.bhphotovideo.com/c/product/1649504-REG/sony_zv_e10_mirrorless_camera_body.html">
 			<h3><i class="ri-camera-line"></i> Camera</h3>
@@ -69,7 +69,7 @@
 	</div>
 </div>
 <div class="section everyday-software">
-	<h2><i data-feather="align-right"></i> Everyday Software I Use</h2>
+	<h2><i class="ri-align-right"></i> Everyday Software I Use</h2>
 	<div class="lists">
 		<a class="float list" href="https://floorp.app">
 			<h3><i class="ri-firefox-browser-fill"></i> Browser</h3>
@@ -106,7 +106,7 @@
 	</div>
 </div>
 <div class="section specialised-software">
-	<h2><i data-feather="align-right"></i> Specialised Software I Use</h2>
+	<h2><i class="ri-align-right"></i> Specialised Software I Use</h2>
 	<div class="lists">
 		<a class="float list" href="https://godotengine.org">
 			<h3><i class="ri-game-line"></i> Game Engine</h3>
@@ -137,16 +137,16 @@
 <div class="section inline social">
 	<h2><i data-feather="message-circle"></i> Socials</h2>
 	<div class="icons">
-		<a href='https://github.com/swarbler/'><i class="ri-github-fill"></i></a>
-		<a href='https://spenguin.itch.io/'><i class="ri-gamepad-line"></i></a>
-		<a href='https://ohai.social/@splatypus'><i class="ri-mastodon-line"></i></a>
+		<a href='https://github.com/swarbler/'><img height="48" width="48" src="https://cdn.simpleicons.org/github/7e9275"/></a>
+		<a href='https://spenguin.itch.io/'><img height="48" width="48" src="https://cdn.simpleicons.org/itchdotio/7e9275"/></a>
+		<a href='https://ohai.social/@splatypus'><img height="48" width="48" src="https://cdn.simpleicons.org/mastodon/7e9275"/></a>
 	</div>
 </div>
 <div class="section inline forums">
 	<h2><i data-feather="message-square"></i> Forums</h2>
 	<div class="links">
-		<a href='https://stackoverflow.com/users/26354611/sbird'><img height="32" width="32" src="https://cdn.simpleicons.org/stackoverflow/7e9275"/> Stack Overflow</a>
-		<a href='https://lemmy.world/u/scheep'><img height="32" width="32" src="https://cdn.simpleicons.org/lemmy/7e9275"/> Lemmy</a>
+		<a href='https://stackoverflow.com/users/26354611/sbird'><img height="24" width="24" src="https://cdn.simpleicons.org/stackoverflow/7e9275"/> Stack Overflow</a>
+		<a href='https://lemmy.world/u/scheep'><img class="lemmy" height="32" width="32" src="https://cdn.simpleicons.org/lemmy/7e9275"/> Lemmy</a>
 		<a href='https://www.thecodingforums.com/members/scassowary.107374/'><i data-lucide="square-terminal"></i> The Coding Forums</a>
 		<a href='https://forums.tomshardware.com/members/swoodpecker.2992082/'><i data-lucide="hammer"></i> Tom's Hardware</a>
 	</div>
