--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<h1>Hi, I'm <span>sbird</span> and I like to make all sorts of things!</h1>
 </div>
 <div class="section">
-	<h2><i data-feather="align-right"></i> Example List</h2>
+	<h2><i class="ri-align-right"></i> Example List</h2>
 	<div class="lists">
 		<div class="float list">
 			<h3>EXAMPLE a</h3>
@@ -103,7 +103,7 @@
 	<img class="cycle4" src="https://placehold.co/600x400" alt="placeholder">
 </div>
 <div class="section">
-	<h2><i data-feather="align-right"></i> Example Cards</h2>
+	<h2><i class="ri-align-right"></i> Example Cards</h2>
 	<div class="cards">
 		<a class="float card" href="https://github.com">
 			<h3>EXAMPLE 1a</h3>
@@ -139,7 +139,7 @@
 	</div>
 </div>
 <div class="section">
-	<h2><i data-feather="align-right"></i> Example TXT List</h2>
+	<h2><i class="ri-align-right"></i> Example TXT List</h2>
 	<div class="lists">
 		<div class="txt list">
 			<h3>EXAMPLE a</h3>
