--- a/photos/index.html
+++ b/photos/index.html
@@ -27,7 +27,7 @@
 	<h1>I enjoy taking <span>photos</span> of all sorts of things</h1>
 </div>
 <div class="section gallery">
-	<h2><i data-feather="align-right"></i> people, objects, and nature</h2>
+	<h2><i class="ri-align-right"></i> people, objects, and nature</h2>
 	<img src="../images/zve/vertical-street-photos/ZVE02293.webp" alt="shadow of the tree">
 	<img src="../images/zve/vertical-street-photos/ZVE02327.webp" alt="boat in the lake">
 	<img src="../images/zve/street-photos/ZVE02096.webp" alt="boat in a river">
@@ -46,7 +46,7 @@
 	<img src="../images/zve/street-photos/ZVE00656.webp" alt="flares">
 </div>
 <div class="section gallery">
-	<h2><i data-feather="align-right"></i> in the zoo</h2>
+	<h2><i class="ri-align-right"></i> in the zoo</h2>
 	<img src="../images/zve/in-the-zoo/ZVE01880.webp" alt="swimming bear">
 	<img src="../images/zve/in-the-zoo/ZVE01941.webp" alt="flamingoes and boy">
 	<img src="../images/zve/in-the-zoo/ZVE01804.webp" alt="panda">
@@ -57,7 +57,7 @@
 	<img src="../images/zve/in-the-zoo/ZVE01932.webp" alt="woodpecker">
 </div>
 <div class="section gallery">
-	<h2><i data-feather="align-right"></i> a bunch of cat photos</h2>
+	<h2><i class="ri-align-right"></i> a bunch of cat photos</h2>
 	<img src="../images/zve/cat-photos/ZVE00451.webp" alt="staring cat">
 	<img src="../images/zve/cat-photos/ZVE00458.webp" alt="sleeping cat">
 	<img src="../images/zve/cat-photos/ZVE00501.webp" alt="sleeping cat 2">
