--- a/example/index.html
+++ b/example/index.html
@@ -50,7 +50,7 @@
 	<img class="cycle4" src="https://placehold.co/600x400" alt="placeholder">
 </div>
 <div class="section">
-	<h2><i data-feather="align-right"></i> Example List</h2>
+	<h2><i class="ri-align-right"></i> Example List</h2>
 	<div class="lists">
 		<div class="float list">
 			<h3>EXAMPLE a</h3>
@@ -109,7 +109,7 @@
 	</div>
 </div>
 <div class="section">
-	<h2><i data-feather="align-right"></i> Example Tabs</h2>
+	<h2><i class="ri-align-right"></i> Example Tabs</h2>
 	<div class="tabs">
 		<a class="float tab" href="https://github.com">
 			<h3>Example 1a</h3>
@@ -154,7 +154,7 @@
 	</div>
 </div>
 <div class="section">
-	<h2><i data-feather="align-right"></i> Example Cards</h2>
+	<h2><i class="ri-align-right"></i> Example Cards</h2>
 	<div class="cards">
 		<a class="float card" href="https://github.com">
 			<h3>EXAMPLE 1a</h3>
@@ -217,7 +217,7 @@
 	<img class="swipe5" src="https://placehold.co/600x200/cyan/000000" alt="placeholder">
 </div>
 <div class="section">
-	<h2><i data-feather="align-right"></i> Example TXT List</h2>
+	<h2><i class="ri-align-right"></i> Example TXT List</h2>
 	<div class="lists">
 		<div class="txt list">
 			<h3>EXAMPLE a</h3>
@@ -328,7 +328,7 @@
 	</div>
 </div>
 <div class="section">
-	<h2><i data-feather="align-right"></i> Example TXT Tabs</h2>
+	<h2><i class="ri-align-right"></i> Example TXT Tabs</h2>
 	<div class="tabs">
 		<a class="txt tab" href="https://github.com">
 			<h3>Example 1a</h3>
@@ -371,7 +371,7 @@
 	<img class="slide2" src="https://placehold.co/600x300" alt="placeholder">
 </div>
 <div class="section">
-	<h2><i data-feather="align-right"></i> Example TXT Cards</h2>
+	<h2><i class="ri-align-right"></i> Example TXT Cards</h2>
 	<div class="cards">
 		<a class="txt card" href="https://github.com">
 			<h3>EXAMPLE 1a</h3>
@@ -421,7 +421,7 @@
 	</div>
 </div>
 <div class="section">
-	<h2><i data-feather="align-right"></i> Example Timeline</h2>
+	<h2><i class="ri-align-right"></i> Example Timeline</h2>
 	<div class="timeline">
 		<div class="point">
 			<i data-feather="arrow-right"></i>
@@ -482,7 +482,7 @@
 	</div>
 </div>
 <div class="bx-section">
-	<h2><i data-feather="align-right"></i> Example BX List</h2>
+	<h2><i class="ri-align-right"></i> Example BX List</h2>
 	<div class="lists">
 		<div class="float list">
 			<h3>EXAMPLE a</h3>
@@ -539,7 +539,7 @@
 	<img class="cycle4" src="https://placehold.co/600x400" alt="placeholder">
 </div>
 <div class="bx-section">
-	<h2><i data-feather="align-right"></i> Example BX Tabs</h2>
+	<h2><i class="ri-align-right"></i> Example BX Tabs</h2>
 	<div class="tabs">
 		<a class="float tab" href="https://github.com">
 			<h3>Example 1a</h3>
@@ -578,7 +578,7 @@
 	</div>
 </div>
 <div class="bx-section">
-	<h2><i data-feather="align-right"></i> Example BX Cards</h2>
+	<h2><i class="ri-align-right"></i> Example BX Cards</h2>
 	<div class="cards">
 		<a class="float card" href="https://github.com">
 			<h3>EXAMPLE 1a</h3>
