changed all icons to use remix icons

--- a/about/index.html
+++ b/about/index.html
@@ -13,13 +13,11 @@
 <body>
 <nav>
 	<ul>
-		<li><a class="home" href="../"><i data-feather="droplet"></i></a></li>
-		<li><a class="projects" href="../projects/"><i data-feather="git-pull-request"></i></a></li>
-		<li><a class="articles" href="../articles/"><i data-feather="edit-3"></i></a></li>
-		<li><a class="photos" href="../photos/"><i data-feather="image"></i></a></li>
-		<li><a class="other" href="../other/"><i data-feather="paperclip"></i></a></li>
-		<li><a class="about activenav" href=""><i data-feather="coffee"></i></a></li>
-		<li><a class="example" href="../example/"><i data-feather="tool"></i></a></li>
+		<li><a class="home" href="../"><i class="ri-contrast-drop-line"></i></a></li>
+		<li><a class="projects" href="../projects/"><i class="ri-git-pull-request-line"></i></a></li>
+		<li><a class="photos" href="../photos/"><i class="ri-image-line"></i></a></li>
+		<li><a class="about activenav" href=""><i class="ri-drinks-2-line"></i></a></li>
+		<li><a class="example" href="../example/"><i class="ri-layout-5-line"></i></a></li>
 	</ul>
 </nav>
 <div class="header">
@@ -135,7 +133,7 @@
 	</div>
 </div>
 <div class="section inline social">
-	<h2><i data-feather="message-circle"></i> Socials</h2>
+	<h2><i class="ri-message-2-line"></i> Socials</h2>
 	<div class="icons">
 		<a href='https://github.com/swarbler/'><img height="48" width="48" src="https://cdn.simpleicons.org/github/7e9275"/></a>
 		<a href='https://spenguin.itch.io/'><img height="48" width="48" src="https://cdn.simpleicons.org/itchdotio/7e9275"/></a>
@@ -143,7 +141,7 @@
 	</div>
 </div>
 <div class="section inline forums">
-	<h2><i data-feather="message-square"></i> Forums</h2>
+	<h2><i class="ri-question-answer-line"></i> Forums</h2>
 	<div class="links">
 		<a href='https://stackoverflow.com/users/26354611/sbird'><img height="24" width="24" src="https://cdn.simpleicons.org/stackoverflow/7e9275"/> Stack Overflow</a>
 		<a href='https://lemmy.world/u/scheep'><img class="lemmy" height="32" width="32" src="https://cdn.simpleicons.org/lemmy/7e9275"/> Lemmy</a>
@@ -152,7 +150,7 @@
 	</div>
 </div>
 <div class="footer">
-	<p id="footer-msg">Made with <i data-feather="cloud-snow"></i> by sbird</p>
+	<p id="footer-msg">Made with <i class="ri-snowy-line"></i> by sbird</p>
 </div>
 <script>
 	feather.replace();
