--- a/index.html
+++ b/index.html
@@ -13,13 +13,11 @@
 <body>
 <nav>
 	<ul>
-		<li><a class="home activenav" href=""><i data-feather="droplet"></i></a></li>
-		<li><a class="projects" href="projects/"><i data-feather="git-pull-request"></i></a></li>
-		<li><a class="articles" href="articles/"><i data-feather="edit-3"></i></a></li>
-		<li><a class="photos" href="photos/"><i data-feather="image"></i></a></li>
-		<li><a class="other" href="other/"><i data-feather="paperclip"></i></a></li>
-		<li><a class="about" href="about/"><i data-feather="coffee"></i></a></li>
-		<li><a class="example" href="example/"><i data-feather="tool"></i></a></li>
+		<li><a class="home activenav" href=""><i class="ri-contrast-drop-line"></i></a></li>
+		<li><a class="projects" href="projects/"><i class="ri-git-pull-request-line"></i></a></li>
+		<li><a class="photos" href="photos/"><i class="ri-image-line"></i></a></li>
+		<li><a class="about" href="about/"><i class="ri-drinks-2-line"></i></a></li>
+		<li><a class="example" href="example/"><i class="ri-layout-5-line"></i></a></li>
 	</ul>
 </nav>
 <div class="header">
@@ -183,7 +181,7 @@
 	</div>
 </div>
 <div class="footer">
-	<p>Made with <i data-feather="cloud-lightning"></i> by sbird</p>
+	<p>Made with <i class="ri-thunderstorms-line"></i> by sbird</p>
 </div>
 <script>
 	feather.replace();
