--- a/example/index.html
+++ b/example/index.html
@@ -13,12 +13,10 @@
 <body>
 <nav>
 	<ul>
-		<li><a class="home" href="../"><i data-feather="droplet"></i></a></li>
-		<li><a class="projects" href="../projects/"><i data-feather="git-pull-request"></i></a></li>
-		<li><a class="articles" href="../articles/"><i data-feather="edit-3"></i></a></li>
-		<li><a class="photos" href="../photos/"><i data-feather="image"></i></a></li>
-		<li><a class="other" href="../other/"><i data-feather="paperclip"></i></a></li>
-		<li><a class="about" href="../about/"><i data-feather="coffee"></i></a></li>
+		<li><a class="home" href="../"><i class="ri-contrast-drop-line"></i></a></li>
+		<li><a class="projects" href="../projects/"><i class="ri-git-pull-request-line"></i></a></li>
+		<li><a class="photos" href="../photos/"><i class="ri-image-line"></i></a></li>
+		<li><a class="about" href="../about/"><i class="ri-drinks-2-line"></i></a></li>
 	</ul>
 </nav>
 <div class="header"> 
@@ -424,42 +422,42 @@
 	<h2><i class="ri-align-right"></i> Example Timeline</h2>
 	<div class="timeline">
 		<div class="point">
-			<i data-feather="arrow-right"></i>
+			<i class="ri-arrow-right-wide-line"></i>
 			<div class="ptext">
 				<h3>EXAMPLE 2001</h3>
 				<p>example paragraph. blah blah blah.</p>
 			</div>
 		</div>
 		<div class="point">
-			<i data-feather="arrow-right"></i>
+			<i class="ri-arrow-right-wide-line"></i>
 			<div class="ptext">
 				<h3>EXAMPLE 2003</h3>
 				<p>example paragraph. blah blah blah.</p>
 			</div>
 		</div>
 		<div class="point">
-			<i data-feather="arrow-right"></i>
+			<i class="ri-arrow-right-wide-line"></i>
 			<div class="ptext">
 				<h3>EXAMPLE 2004.A</h3>
 				<p>example paragraph. blah blah blah.</p>
 			</div>
 		</div>
 		<div class="point">
-			<i data-feather="arrow-right"></i>
+			<i class="ri-arrow-right-wide-line"></i>
 			<div class="ptext">
 				<h3>EXAMPLE 2004.B</h3>
 				<p>example paragraph. blah blah blah.</p>
 			</div>
 		</div>
 		<div class="point">
-			<i data-feather="arrow-right"></i>
+			<i class="ri-arrow-right-wide-line"></i>
 			<div class="ptext">
 				<h3>EXAMPLE 2005</h3>
 				<p>example paragraph. blah blah blah.</p>
 			</div>
 		</div>
 		<div class="point">
-			<i data-feather="arrow-right"></i>
+			<i class="ri-arrow-right-wide-line"></i>
 			<div class="ptext">
 				<h3>EXAMPLE 2006</h3>
 				<p>example paragraph. blah blah blah.</p>
@@ -621,7 +619,7 @@
 	</div>
 </div>
 <div class="footer">
-	<p>Made with <i data-feather="upload-cloud"></i> by sbird</p>
+	<p>Made with <i class="ri-upload-cloud-2-line"></i> by sbird</p>
 </div>
 <script>
 	feather.replace();
