--- a/projects/index.html
+++ b/projects/index.html
@@ -13,13 +13,11 @@
 <body>
 <nav>
 	<ul>
-		<li><a class="home" href="../"><i data-feather="droplet"></i></a></li>
-		<li><a class="projects activenav" href=""><i data-feather="git-pull-request"></i></a></li>
-		<li><a class="articles" href="../articles/"><i data-feather="edit-3"></i></a></li>
-		<li><a class="photos" href="../photos/"><i data-feather="image"></i></a></li>
-		<li><a class="other" href="../other/"><i data-feather="paperclip"></i></a></li>
-		<li><a class="about" href="../about/"><i data-feather="coffee"></i></a></li>
-		<li><a class="example" href="../example/"><i data-feather="tool"></i></a></li>
+		<li><a class="home" href="../"><i class="ri-contrast-drop-line"></i></a></li>
+		<li><a class="projects activenav" href=""><i class="ri-git-pull-request-line"></i></a></li>
+		<li><a class="photos" href="../photos/"><i class="ri-image-line"></i></a></li>
+		<li><a class="about" href="../about/"><i class="ri-drinks-2-line"></i></a></li>
+		<li><a class="example" href="../example/"><i class="ri-layout-5-line"></i></a></li>
 	</ul>
 </nav>
 <div class="header">
@@ -74,8 +72,8 @@
 <div id="revisionioModal" class="modal">
 	<div class="modal-content">
 		<div class="modal-header">
-			<span class="revisionio close"><i data-feather="x"></i></span>
-			<a href="https://github.com/swarbler/quiz">view on github <i data-feather="github"></i></a>
+			<span class="revisionio close"><i class="ri-close-line"></i></span>
+			<a href="https://github.com/swarbler/quiz">view on github <i class="ri-github-fill"></i></a>
 			<h2>revisionio</h2>
 		</div>
 		<div class="modal-body">
@@ -88,8 +86,8 @@
 <div id="pnameModal" class="modal">
 	<div class="modal-content">
 		<div class="modal-header">
-			<span class="pname close"><i data-feather="x"></i></span>
-			<a href="https://github.com/swarbler/pname">view on github <i data-feather="github"></i></a>
+			<span class="pname close"><i class="ri-close-line"></i></span>
+			<a href="https://github.com/swarbler/pname">view on github <i class="ri-github-fill"></i></a>
 			<h2>pname</h2>
 		</div>
 		<div class="modal-body">
@@ -102,8 +100,8 @@
 <div id="countryguessModal" class="modal">
 	<div class="modal-content">
 		<div class="modal-header">
-			<span class="countryguess close"><i data-feather="x"></i></span>
-			<a href="https://github.com/swarbler/countryguess">view on github <i data-feather="github"></i></a>
+			<span class="countryguess close"><i class="ri-close-line"></i></span>
+			<a href="https://github.com/swarbler/countryguess">view on github <i class="ri-github-fill"></i></a>
 			<h2>countryguess</h2>
 		</div>
 		<div class="modal-body">
@@ -116,8 +114,8 @@
 <div id="bestofModal" class="modal">
 	<div class="modal-content">
 		<div class="modal-header">
-			<span class="bestof close"><i data-feather="x"></i></span>
-			<a href="https://github.com/swarbler/bestof">view on github <i data-feather="github"></i></a>
+			<span class="bestof close"><i class="ri-close-line"></i></span>
+			<a href="https://github.com/swarbler/bestof">view on github <i class="ri-github-fill"></i></a>
 			<h2>bestof</h2>
 		</div>
 		<div class="modal-body">
@@ -161,7 +159,7 @@
 	</div>
 </div>
 <div class="footer">
-	<p>Made with <i data-feather="cloud-drizzle"></i> by sbird</p>
+	<p>Made with <i class="ri-sun-cloudy-line"></i> by sbird</p>
 </div>
 <script>
 	feather.replace();
