removed references to lucide icon and feather icon as they are not neccesary

--- a/about/index.html
+++ b/about/index.html
@@ -7,8 +7,6 @@
 	<link rel="icon" type="image/x-icon" href="../bird5.svg" class="fav">
 	<link rel="stylesheet" href="../style.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.6.0/fonts/remixicon.css"/>
-	<script src="https://unpkg.com/feather-icons"></script>
-	<script src="https://unpkg.com/lucide@latest"></script>
 </head>
 <body>
 <nav>
@@ -145,18 +143,12 @@
 	<div class="links">
 		<a href='https://stackoverflow.com/users/26354611/sbird'><img height="24" width="24" src="https://cdn.simpleicons.org/stackoverflow/7e9275"/> Stack Overflow</a>
 		<a href='https://lemmy.world/u/scheep'><img class="lemmy" height="32" width="32" src="https://cdn.simpleicons.org/lemmy/7e9275"/> Lemmy</a>
-		<a href='https://www.thecodingforums.com/members/scassowary.107374/'><i data-lucide="square-terminal"></i> The Coding Forums</a>
-		<a href='https://forums.tomshardware.com/members/swoodpecker.2992082/'><i data-lucide="hammer"></i> Tom's Hardware</a>
+		<a href='https://www.thecodingforums.com/members/scassowary.107374/'><i class="ri-terminal-box-line"></i> The Coding Forums</a>
+		<a href='https://forums.tomshardware.com/members/swoodpecker.2992082/'><i class="ri-hammer-line"></i> Tom's Hardware</a>
 	</div>
 </div>
 <div class="footer">
 	<p id="footer-msg">Made with <i class="ri-snowy-line"></i> by sbird</p>
 </div>
-<script>
-	feather.replace();
-</script>
-<script>
-    lucide.createIcons();
-</script>
 </body>
 </html>
