added different icons for each section

--- a/about/index.html
+++ b/about/index.html
@@ -48,7 +48,7 @@
 	</div>
 </div>
 <div class="section camera-gear">
-	<h2><i class="ri-align-right"></i> Camera Gear</h2>
+	<h2><i class="ri-camera-3-line"></i> Camera Gear</h2>
 	<div class="cards">
 		<a class="float card" href="https://www.bhphotovideo.com/c/product/1649504-REG/sony_zv_e10_mirrorless_camera_body.html">
 			<h3><i class="ri-camera-line"></i> Camera</h3>
@@ -65,7 +65,7 @@
 	</div>
 </div>
 <div class="section everyday-software">
-	<h2><i class="ri-align-right"></i> Everyday Software I Use</h2>
+	<h2><i class="ri-folders-line"></i> Everyday Software I Use</h2>
 	<div class="lists">
 		<a class="float list" href="https://floorp.app">
 			<h3><i class="ri-firefox-browser-fill"></i> Browser</h3>
@@ -102,7 +102,7 @@
 	</div>
 </div>
 <div class="section specialised-software">
-	<h2><i class="ri-align-right"></i> Specialised Software I Use</h2>
+	<h2><i class="ri-folder-settings-line"></i> Specialised Software I Use</h2>
 	<div class="lists">
 		<a class="float list" href="https://godotengine.org">
 			<h3><i class="ri-game-line"></i> Game Engine</h3>
