--- a/projects/index.html
+++ b/projects/index.html
@@ -23,7 +23,7 @@
 	<h1>I work on a lot of <span>projects</span> in my free time</h1>
 </div>
 <div class="section">
-	<h2><i class="ri-align-right"></i> Websites</h2>
+	<h2><i class="ri-pages-line"></i> Websites</h2>
 	<div class="tabs">
 		<div class="float tab">
 			<h3>bestof <span class="spot" onclick="displayModal('bestof')">?</span></h3>
@@ -33,7 +33,7 @@
 	</div>
 </div>
 <div class="section">
-	<h2><i class="ri-align-right"></i> Programs</h2>
+	<h2><i class="ri-terminal-window-line"></i> Programs</h2>
 	<div class="tabs">
 		<div class="float tab">
 			<h3>countryguess <span class="spot" onclick="displayModal('countryguess')">?</span></h3>
@@ -53,7 +53,7 @@
 	</div>
 </div>
 <div class="section">
-	<h2><i class="ri-align-right"></i> Games</h2>
+	<h2><i class="ri-gamepad-line"></i> Games</h2>
 	<div class="tabs">
 		<a class="float tab" href="https://github.com">
 			<h3>Example 1</h3>
