--- a/about/index.html
+++ b/about/index.html
@@ -133,9 +133,10 @@
 <div class="section inline social">
 	<h2><i class="ri-message-2-line"></i> Socials</h2>
 	<div class="icons">
+		<a href='https://ohai.social/@splatypus'><img height="48" width="48" src="https://cdn.simpleicons.org/mastodon/7e9275"/></a>
+		<a href='https://pixelfed.social/sphoto'><img height="48" width="48" src="https://cdn.simpleicons.org/pixelfed/7e9275"/></a>
 		<a href='https://github.com/swarbler/'><img height="48" width="48" src="https://cdn.simpleicons.org/github/7e9275"/></a>
 		<a href='https://spenguin.itch.io/'><img height="48" width="48" src="https://cdn.simpleicons.org/itchdotio/7e9275"/></a>
-		<a href='https://ohai.social/@splatypus'><img height="48" width="48" src="https://cdn.simpleicons.org/mastodon/7e9275"/></a>
 	</div>
 </div>
 <div class="section inline forums">
